--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,103 @@
+:root {
+  --chart-backgroud-color: #f2f2f2;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100%;
+  max-height: 100%;
+  width: 100vw;
+  margin: 5px 0 50px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  overflow: auto;
+  background-color: #ffffff;
+}
+
+.heading {
+  margin: 10px 0;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  margin: 20px 0;
+  font-size: 30px;
+}
+
+table {
+  border-collapse: separate; 
+  border-spacing: 0; 
+  width: 100%;
+  
+}
+
+td, th {
+  padding: 10px; 
+  border: 1px solid #dddddd; 
+}
+
+
+th {
+  background-color: #f2f2f2; 
+}
+
+td {
+  width: 200px;
+}
+
+tr:first-child th:first-child {
+  border-top-left-radius: 10px; 
+}
+
+tr:first-child th:last-child {
+  border-top-right-radius: 10px;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius: 10px; 
+}
+
+tr:last-child td:last-child {
+  border-bottom-right-radius: 10px; 
+}
+
+img {
+  padding: 5px;
+  background-color: #bbb8b8;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.hover-pointer {
+  cursor: pointer;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 90vw;
+  height: max-content;
+  margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +110,49 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.Antelope-Table {
+  width: 100%;
+  background-color: #fff;
+  margin: 25px 0;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.PieChart {
+  background-color: #282c34;
+}
+
+
+.chartsContainer {
+  width: 100%;
+  height: auto;
+}
+
+.chartRow {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 50px 0 0 0;
+  background-color: var(--chart-backgroud-color);
+  border-radius: 10px;
+  margin: 20px 0px;
+  padding: 20px;
+}
+
+.pieChartRow {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 20px 0px;
+}
+
+.chart {
+  width: 49%;
+  background-color: var(--chart-backgroud-color);
+  border-radius: 10px;
+  padding: 20px 0;
 }
