Clean code and fix components structure

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow: auto;
   background-color: #ffffff;
 }
@@ -35,20 +35,19 @@ h2 {
 }
 
 table {
-  border-collapse: separate; 
-  border-spacing: 0; 
+  border-collapse: separate;
+  border-spacing: 0;
   width: 100%;
-  
 }
 
-td, th {
-  padding: 10px; 
-  border: 1px solid #dddddd; 
+td,
+th {
+  padding: 10px;
+  border: 1px solid #dddddd;
 }
-
 
 th {
-  background-color: #f2f2f2; 
+  background-color: #f2f2f2;
 }
 
 td {
@@ -56,7 +55,7 @@ td {
 }
 
 tr:first-child th:first-child {
-  border-top-left-radius: 10px; 
+  border-top-left-radius: 10px;
 }
 
 tr:first-child th:last-child {
@@ -64,11 +63,11 @@ tr:first-child th:last-child {
 }
 
 tr:last-child td:first-child {
-  border-bottom-left-radius: 10px; 
+  border-bottom-left-radius: 10px;
 }
 
 tr:last-child td:last-child {
-  border-bottom-right-radius: 10px; 
+  border-bottom-right-radius: 10px;
 }
 
 img {
@@ -98,7 +97,6 @@ a {
   margin-top: 20px;
 }
 
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -110,7 +108,6 @@ a {
   color: white;
 }
 
-
 .Antelope-Table {
   width: 100%;
   background-color: #fff;
@@ -121,7 +118,6 @@ a {
 .PieChart {
   background-color: #282c34;
 }
-
 
 .chartsContainer {
   width: 100%;
@@ -155,4 +151,19 @@ a {
   background-color: var(--chart-backgroud-color);
   border-radius: 10px;
   padding: 20px 0;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.error {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
